--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -1,30 +1,35 @@
-h1                        {
-      font-size: 24pt ;
-      color: red;
-      text-decoration: underline;
-      font-family: Verdana, helvetica , sans-serif;
-}                                    
+h1{
+    font-size: 24pt;
+    color: red;
+    text-decoration: underline;
+    font-family: tahoma, helvetica, sans-serif;
+}
 
-em             {
+em{
     font-style: normal;
     color: green;
     background-color: lightgrey;
-    font-weight: bold;
+    font-weight: bold;	
 }
+
+
 ul {
     list-style-type: square;
+} 
+
+a:hover {
+    text-decoration: none;
 }
-a: hover {
-text-decoration: none;
+
+li:first-child {
+    border: thick solid green;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    padding: 1ex;
+    width: 41%;
 }
-li: first-child {
-border: thick solid green;
-margin-bottom: 1em;
-margin-top: 1em;
-padding: 1ex;
-width: 40%;
-7
-p. centered f
-text-align: center;
-width: 50%;
+
+p.centered {
+    text-align: center;
+    width: 50%;
 }
